# ml-nyc_taxi_demand_predictor

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: feature_pipeline.yaml  inference_pipeline.yaml  training_pipeline.yaml
models/: model.pkl  taxi_demand_predictor_next_hour.pkl
notebooks/: 01_load_and_validate_raw_data.ipynb  02_transform_raw_data_into_ts_data.ipynb  03_transform_ts_data_into_features_and_targets.ipynb  04_transform_raw_data_into_features_and_targets.ipynb  05_visualize_training_data.ipynb  06_baseline_model.ipynb  07_xgboost_model.ipynb  08_lightgbm_model.ipynb  09_lightgbm_model_with_feature_engineering.ipynb  10_lightgbm_model_with_hyperparameter_tuning.ipynb  11_backfill_feature_store.ipynb  12_feature_pipeline.ipynb  14_inference_pipeline.ipynb
scripts/: feature_pipeline.py
src/helpers/: config.py  data.py  data_split.py  discord.py  feature_store_api.py  frontend.py  frontend_monitoring.py  inference.py  model.py  model_registry.py  model_registry_api.py  monitoring.py  paths.py  plot.py
src/pipelines/: backfill_feature_group.py  backfill_inference.py  feature_pipeline.py  inference_pipeline.py  training_pipeline.py
